--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_windowmanager: ^0.2.0
+  google_fonts: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
